<resources>
    <string name="app_name">Tasks</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="switch_user">Switch User</string>
    <string name="action_settings">Settings</string>
    <string name="nav_open_task">Open Tasks</string>
    <string name="nav_shopping_list">Shopping List</string>
    <string name="nav_schedule">Schedule</string>
    <string name="nav_task_backlog">Task Backlog</string>
    <string name="nav_people">People</string>
    <string name="nav_cupboard_fridge">Cupboard and Fridge</string>
    <string name="nav_broom_closet">Broom Closet (Tools)</string>
    <string name="title_activity_specific_task">Temp Task Name</string>
    <string name="assignedTo">Assigned To</string>
    <string name="vertical_ellipsis">&#8942;</string>
    <string name="taskOptionTitle">Task Options</string>
    <string name="taskCreatedBy">Created By</string>
    <string name="equipmentNeeded">Equipment Needed</string>
    <string name="notes">Notes</string>
    <string name="title_equipment_activity">Equipment</string>
    <string name="newEquipment">New Equipment</string>
    <string name="newTask">New Task</string>
    <string name="create">Add</string>
    <string name="cancel">Cancel</string>
    <string name="title">Title:</string>
    <string name="duration">Duration:</string>
    <string name="deadline">Deadline:</string>
    <string name="lblEquipment">Equipment:</string>
    <string name="lblNotes">Notes:</string>
    <string name="selectUser">Select a user</string>
    <string name="grocery">Grocery</string>
    <string name="material">Material</string>
    <string name="hour">hour</string>
    <string name="points">Points:</string>
    <string name="shoppingAdd">ADD AN ITEM</string>
    <string name="shoppingModify">Modify An Item</string>
    <string name="add">Add</string>
    <string name="modify">Modify</string>
    <string name="delete">Delete</string>
    <string name="deleteItem">Delete the item</string>
    <string name="unassigned">Unassigned</string>


    <string-array name="shoppingListOption">
        <item>Grocery</item>
        <item>Material</item>
    </string-array>

    <string name="title_activity_shopping_list">Shopping List</string>
    <string name="label_Points">Points:</string>

    <string name="sharedPrefUserID">UserID</string>

</resources>
