<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_shopping_cart"
            android:title="@string/nav_shopping_list" />

        <item
            android:id="@+id/nav_cupboard_fridge"
            android:icon="@drawable/ic_fridge"
            android:title="@string/nav_cupboard_fridge" />
        <item
            android:id="@+id/nav_broom"
            android:icon="@drawable/ic_broom"
            android:title="@string/nav_broom_closet" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>

</menu>
